--- a/index.html
+++ b/index.html
@@ -212,73 +212,73 @@
             <div class="icon-box">
             
               <i class="ri-store-line" style="color: #ffbb2c;"></i>
-              <h3><a href="">Basic html Project</a></h3>
+              <h3><a target="_blank" href="">Basic html Project</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-              <h3><a href="">Basic html + css Project</a></h3>
+              <h3><a target="_blank" href="https://dibyenducode.github.io/web/">Basic html + css Project</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-              <h3><a href="">Responsive Web Project</a></h3>
+              <h3><a target="_blank" href="https://onlinecvbazar.com/">Responsive Web Project</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
-              <h3><a href="">Javascript Basic Project 1</a></h3>
+              <h3><a target="_blank" href="">Javascript Basic Project 1</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-database-2-line" style="color: #47aeff;"></i>
-              <h3><a href="">Javascript Basic Project 2</a></h3>
+              <h3><a target="_blank" href="">Javascript Basic Project 2</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
-              <h3><a href="">Javascript Basic Project 3</a></h3>
+              <h3><a target="_blank" href="">Javascript Basic Project 3</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-              <h3><a href="">Javascript Basic Project 4</a></h3>
+              <h3><a target="_blank" href="">Javascript Basic Project 4</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
-              <h3><a href="">Javascript API Based Project 1</a></h3>
+              <h3><a target="_blank" href="">Javascript API Based Project 1</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-anchor-line" style="color: #b2904f;"></i>
-              <h3><a href="">Javascript API Based Project 2</a></h3>
+              <h3><a target="_blank" href="">Javascript API Based Project 2</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-disc-line" style="color: #b20969;"></i>
-              <h3><a href="">Full Website in One Hour</a></h3>
+              <h3><a target="_blank" href="">Full Website in One Hour</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-base-station-line" style="color: #ff5828;"></i>
-              <h3><a href="">CMS Based Project </a></h3>
+              <h3><a target="_blank" href="">CMS Based Project </a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-              <h3><a href="">Full e-commerce Website</a></h3>
+              <h3><a target="_blank" href="">Full e-commerce Website</a></h3>
             </div>
           </div>
         </div>
