--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-disc-line" style="color: #b20969;"></i>
-              <h3><a target="_blank" href="">Full Website in One Hour</a></h3>
+              <h3><a target="_blank" href="https://pritambiswas.tk/">Full Website in One Hour</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
