--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="icon-box">
             
               <i class="ri-store-line" style="color: #ffbb2c;"></i>
-              <h3><a target="_blank" href="">Basic html Project</a></h3>
+              <h3><a target="_blank" href="https://dibyenducode.github.io/onlyhtml/">Basic html Project</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
