--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
-              <h3><a target="_blank" href="">CSS Div Project</a></h3>
+              <h3><a target="_blank" href="https://dibyenducode.github.io/cssdiv/">CSS Div Project</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
