--- a/trainers.html
+++ b/trainers.html
@@ -92,7 +92,7 @@
       </div>
     </div><!-- End Breadcrumbs -->
     <br>
- <center><h1>Notes</h1></center>
+ <center><h1>Class Notes</h1></center>
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing">
       <div class="container" data-aos="fade-up">
@@ -101,7 +101,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="box">
-              <h3>Html Notes</h3>
+              <h3>Class Notes Day 1 </h3>
               <p> Click Download button to download html full pdf notes<br><br> </p>
               <!-- <ul>
                 <li>Aida dere</li>
