--- a/trainers.html
+++ b/trainers.html
@@ -102,7 +102,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="box">
               <h3>Class Notes Day 1 </h3>
-              <p> Click Download button to download html full pdf notes<br><br> </p>
+              <p> Click Download button to download class notes Day 1 pdf<br><br> </p>
               <!-- <ul>
                 <li>Aida dere</li>
                 <li>Nec feugiat nisl</li>
@@ -118,8 +118,8 @@
 
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box">
-              <h3>Css Notes</h3>
-              <p> Click Download button to download css full pdf notes<br> <br></p>
+              <h3>Class Notes Day 2</h3>
+              <p> Click Download button to download class notes Day 2 pdf<br> <br></p>
               <!-- <h4><sup>$</sup>19<span> / month</span></h4> -->
              <!--  <ul>
                 <li>Aida dere</li>
@@ -136,9 +136,9 @@
 
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box">
-              <h3>Javascript Notes</h3>
+              <h3>Class Notes Day 3</h3>
              <!--  <h4><sup>$</sup>29<span> / month</span></h4> -->
-             <p> Click Download button to download Javascript full pdf notes </p>
+             <p> Click Download button to download class notes Day 1 pdf </p>
               <!-- <ul>
                 <li>Aida dere</li>
                 <li>Nec feugiat nisl</li>
@@ -155,8 +155,8 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box">
               <!-- <span class="advanced">Advanced</span> -->
-              <h3>Important Documents</h3>
-               <p> Click Download button to download some important documents in pdf  </p>
+              <h3>Class Dotes Day 4</h3>
+               <p> Click Download button to download class notes day 4 in pdf  </p>
               <!-- <ul>
                 <li>Aida dere</li>
                 <li>Nec feugiat nisl</li>
