--- a/trainers.html
+++ b/trainers.html
@@ -102,7 +102,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="box">
               <h3>Class Notes Day 1 </h3>
-              <p> Click Download button to download class notes Day 1 pdf<br><br> </p>
+              <p> Click Download button to download class notes Day 1 pdf</p>
               <!-- <ul>
                 <li>Aida dere</li>
                 <li>Nec feugiat nisl</li>
@@ -119,7 +119,7 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box">
               <h3>Class Notes Day 2</h3>
-              <p> Click Download button to download class notes Day 2 pdf<br> <br></p>
+              <p> Click Download button to download class notes Day 2 pdf</p>
               <!-- <h4><sup>$</sup>19<span> / month</span></h4> -->
              <!--  <ul>
                 <li>Aida dere</li>
