--- a/trainers.html
+++ b/trainers.html
@@ -138,7 +138,7 @@
             <div class="box">
               <h3>Class Notes Day 3</h3>
              <!--  <h4><sup>$</sup>29<span> / month</span></h4> -->
-             <p> Click Download button to download class notes Day 1 pdf </p>
+             <p> Click Download button to download class notes Day 3 pdf </p>
               <!-- <ul>
                 <li>Aida dere</li>
                 <li>Nec feugiat nisl</li>
@@ -147,7 +147,7 @@
                 <li>Massa ultricies mi</li>
               </ul> -->
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Download</a>
+                <a href="https://drive.google.com/file/d/1st1vb2ardNAoA5yC0IsDyA-4ZXl1hJGp/view?usp=sharing" class="btn-buy">Download</a>
               </div>
             </div>
           </div>
