--- a/trainers.html
+++ b/trainers.html
@@ -155,7 +155,7 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box">
               <!-- <span class="advanced">Advanced</span> -->
-              <h3>Class Dotes Day 4</h3>
+              <h3>Class notes Day 4</h3>
                <p> Click Download button to download class notes day 4 in pdf  </p>
               <!-- <ul>
                 <li>Aida dere</li>
@@ -165,7 +165,7 @@
                 <li>Massa ultricies mi</li>
               </ul> -->
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Download</a>
+                <a href="https://drive.google.com/uc?export=download&id=1U8DPhRhTGhKeWeCGgLOobfS-HEyXO5tO" class="btn-buy">Download</a>
               </div>
             </div>
           </div>
