--- a/trainers.html
+++ b/trainers.html
@@ -173,7 +173,88 @@
         </div>
 
       </div>
-    </section><!-- End Pricing Section -->
+    </section>
+    <section id="pricing" class="pricing">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6">
+            <div class="box">
+              <h3>Class Notes Day 5 </h3>
+              <p> Click Download button to download class notes Day 5 pdf</p>
+              <!-- <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li class="na">Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul> -->
+              <div class="btn-wrap">
+                <a href="https://drive.google.com/uc?export=download&id=1Ah7pEzzQyKYyVW81Hg265pFYSLvpKhQP" class="btn-buy">Download</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
+            <div class="box">
+              <h3>Class Notes Day 6</h3>
+              <p> Click Download button to download class notes Day 6 pdf</p>
+              <!-- <h4><sup>$</sup>19<span> / month</span></h4> -->
+             <!--  <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul> -->
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Download</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+            <div class="box">
+              <h3>Class Notes Day 7</h3>
+             <!--  <h4><sup>$</sup>29<span> / month</span></h4> -->
+             <p> Click Download button to download class notes Day 7 pdf </p>
+              <!-- <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li>Massa ultricies mi</li>
+              </ul> -->
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Download</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+            <div class="box">
+              <!-- <span class="advanced">Advanced</span> -->
+              <h3>Class notes Day 8</h3>
+               <p> Click Download button to download class notes day 8 in pdf  </p>
+              <!-- <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li>Massa ultricies mi</li>
+              </ul> -->
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Download</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+    <!-- End Pricing Section -->
 
     <center><h1>Project Souecr Code</h1></center>
 
