--- a/trainers.html
+++ b/trainers.html
@@ -245,7 +245,7 @@
                 <li>Massa ultricies mi</li>
               </ul> -->
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Download</a>
+                <a href="https://drive.google.com/uc?export=download&id=1lKr2fRj2-iwO4AOGYAXbr1GLkBHS5DOB" class="btn-buy">Download</a>
               </div>
             </div>
           </div>
