--- a/trainers.html
+++ b/trainers.html
@@ -253,6 +253,84 @@
         </div>
 
       </div>
+      <div class="container" data-aos="fade-up">
+
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6">
+            <div class="box">
+              <h3>Class Notes Day 9 </h3>
+              <p> Click Download button to download class notes Day 9 pdf</p>
+              <!-- <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li class="na">Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul> -->
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Download</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
+            <div class="box">
+              <h3>Class Notes Day 10</h3>
+              <p> Click Download button to download class notes Day 10 pdf</p>
+              <!-- <h4><sup>$</sup>19<span> / month</span></h4> -->
+             <!--  <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul> -->
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Download</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+            <div class="box">
+              <h3>Class Notes Day 11</h3>
+             <!--  <h4><sup>$</sup>29<span> / month</span></h4> -->
+             <p> Click Download button to download class notes Day 11 pdf </p>
+              <!-- <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li>Massa ultricies mi</li>
+              </ul> -->
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Download</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+            <div class="box">
+              <!-- <span class="advanced">Advanced</span> -->
+              <h3>Class notes Day 12</h3>
+               <p> Click Download button to download class notes day 12 in pdf  </p>
+              <!-- <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li>Massa ultricies mi</li>
+              </ul> -->
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Download</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
     </section>
     <!-- End Pricing Section -->
 
