--- a/trainers.html
+++ b/trainers.html
@@ -287,7 +287,7 @@
                 <li class="na">Massa ultricies mi</li>
               </ul> -->
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Download</a>
+                <a href="https://drive.google.com/uc?export=download&id=1GI2xyFt_LTp86TDue2UTg-DL-EGgbLkL" class="btn-buy">Download</a>
               </div>
             </div>
           </div>
